--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,54 @@
 /* font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif; */
-body {
+/* body {
   background-color: rgb(241, 173, 134) !important;
+} */
+:root {
+  --branding-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --background-colour: #f9f7fe;
 }
 h1 {
-  color: aliceblue !important;
-  font-family: "Playfair Display", serif;
-  font-weight: bold !important;
+  font-family: var(--heading-font-family);
+  font-weight: bold;
+  font-size: 96px;
+  color: black;
+}
+h2 {
+  color: #272142;
+}
+p {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
+}
+.hero {
+  background-color: var(--background-colour);
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+}
+.hero h2 {
+  font-family: var(--heading-font-family);
+  font-weight: normal;
+  line-height: 2;
+  font-size: 24px;
+  color: #272142;
+}
+.btn-branding {
+  color: #ffff;
+  background-color: var(--branding-color);
+  font-weight: normal;
+  line-height: 27px;
+  font-size: 18px;
+  padding: 15px 30px;
+  margin-top: 40px;
+  border-color: var(--branding-color);
+  border-radius: 4px;
+}
+.btn-branding:hoover {
+  background-color: var(--branding-color) !important;
+  color: #272142 !important;
 }
