--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ font-family: 'Poppins', sans-serif; */
 :root {
   --branding-color: #6c63ff;
   --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
   --background-colour: #f9f7fe;
 }
 h1 {
@@ -13,12 +14,13 @@ h1 {
   font-weight: bold;
   font-size: 96px;
   color: black;
+  margin: 3px;
 }
 h2 {
   color: #272142;
 }
 p {
-  font-family: var(--heading-font-family);
+  font-family: var(--default-font-family);
   font-weight: normal;
 }
 .hero {
