--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,3 @@
-/* font-family: 'Playfair Display', serif;
-font-family: 'Poppins', sans-serif; */
-/* body {
-  background-color: rgb(241, 173, 134) !important;
-} */
 :root {
   --branding-color: #6c63ff;
   --heading-font-family: "Playfair Display", serif;
@@ -17,11 +12,15 @@ h1 {
   margin: 3px;
 }
 h2 {
+  font-family: var(--heading-font-family);
   color: #272142;
+  font-size: 64px;
 }
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero {
   background-color: var(--background-colour);
@@ -53,4 +52,30 @@ p {
 .btn-branding:hoover {
   background-color: var(--branding-color) !important;
   color: #272142 !important;
+}
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.project-description {
+  padding: 80px 60px;
+}
+@media (max-width: 900px) {
+  h1 {
+    font-size: 55px;
+  }
+  h2 {
+    font-size: 35px;
+  }
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  .hero {
+    padding: 50px 20px;
+  }
 }
