--- a/src/style.css
+++ b/src/style.css
@@ -34,9 +34,23 @@ p {
 .hero h2 {
   font-family: var(--heading-font-family);
   font-weight: normal;
-  line-height: 2;
+  line-height: 1.5;
   font-size: 24px;
   color: #272142;
+}
+.about-section {
+  padding: 160px 20px;
+}
+.about-section-content {
+  margin: 30px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
 }
 .btn-branding {
   color: #ffff;
@@ -66,7 +80,7 @@ p {
 }
 @media (max-width: 900px) {
   h1 {
-    font-size: 55px;
+    font-size: 56px;
   }
   h2 {
     font-size: 35px;
@@ -77,5 +91,9 @@ p {
   }
   .hero {
     padding: 50px 20px;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 }
