--- a/src/style.css
+++ b/src/style.css
@@ -38,19 +38,27 @@ p {
   font-size: 24px;
   color: #272142;
 }
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
-.about-section-content {
+.content {
   margin: 30px;
 }
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
+}
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-family: var(--default-font-family);
+}
+.content p {
+  font-size: 14px;
 }
 .btn-branding {
   color: #ffff;
@@ -92,7 +100,7 @@ p {
   .hero {
     padding: 50px 20px;
   }
-  .about-section {
+  .content {
     text-align: center;
     padding: 0;
   }
