--- a/src/style.css
+++ b/src/style.css
@@ -86,12 +86,40 @@ p {
 .project-description {
   padding: 80px 60px;
 }
+.logo {
+  max-height: 40px;
+}
+nav {
+  padding: 20px 0;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+nav a:hover,
+nav li.active a {
+  color: var(--branding-color);
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 56px;
   }
   h2 {
     font-size: 35px;
+  }
+  nav a {
+    font-size: 14px;
   }
   .project-description {
     padding: 0;
