--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,36 @@ nav a:hover,
 nav li.active a {
   color: var(--branding-color);
 }
+footer {
+  margin: 60px 0;
+}
+footer .contact-box {
+  background-color: var(--background-colour);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  text-align: center;
+}
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background-color: var(--background-colour);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 150ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background-color: var(--branding-color);
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 56px;
