--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,10 @@ h2 {
   color: #272142;
   font-size: 64px;
 }
+h3 {
+  font-family: var(--heading-font-family);
+  font-size: 48px;
+}
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
@@ -25,7 +29,7 @@ p {
 .hero {
   background-color: var(--background-colour);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 .hero p {
   font-size: 36px;
@@ -39,7 +43,7 @@ p {
   color: #272142;
 }
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 .content {
   margin: 30px;
@@ -119,6 +123,9 @@ footer .contact-box {
   padding: 30px 120px;
   border-radius: 10px;
 }
+footer .contact-box p {
+  margin: 0;
+}
 footer .email-link {
   text-decoration: none;
   color: black;
@@ -147,6 +154,9 @@ footer .social-links a:hover {
   }
   h2 {
     font-size: 35px;
+  }
+  h3 {
+    font-size: 26px;
   }
   nav a {
     font-size: 14px;
